# carrot-mapper

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  sample-env.txt  sample-local.settings.json
app/airflow/: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.airflow  Dockerfile.scheduler  Dockerfile.webserver  entrypoint-scheduler.sh  entrypoint-webserver.sh  pyproject.toml  requirements.txt
app/airflow/archive/: create_mapping_rules.py  source_concept.py  unused_rules_creation.py
app/airflow/config/: airflow.cfg
app/airflow/dags/: SR_processing_dag.py  auto_mapping_dag.py  auto_mapping_orchestrator_dag.py  auto_mapping_with_search_dag.py  concept_creation_dag.py  concept_mapping_dag.py  concept_mapping_dag_v0.py  concept_mapping_dag_v2.py  concept_mapping_orchestrator_dag.py  concept_reuse_dag.py  concept_transformation_dag.py  concepts_from_vocab_dag.py  create_concepts_from_vocab_dag.py  create_mapping_rules.py  reuse_concepts_dag.py  rules_concepts_orchestrator_dag.py  rules_export_dag.py  search_recommendations_dag.py  test_dag.py  vocabulary_processing_dag.py
app/airflow/dags/libs/: core.py  core_concepts_creation.py  core_create_concepts.py  core_get_existing_concepts.py  core_prep_rules_creation.py  core_reuse_concepts.py  core_rules_creation.py  core_test.py  enums.py  find_R_concepts_to_reuse.py  find_concepts_to_reuse.py  find_standard_V_concepts.py  find_standard_concepts.py  lib.py  queries.py  settings.py  storage_services.py  type.py  types.py  utils.py
app/airflow/dags/libs/SR_processing/: core.py  db_services.py  helpers.py  utils.py
app/airflow/dags/libs/auto_mapping/: core_get_existing_concepts.py  core_prep_rules_creation.py  core_rules_creation.py  core_search_recommendations.py  find_R_concepts_to_reuse.py  find_standard_V_concepts.py  search_recommendations.py
app/airflow/dags/libs/reuse_concepts/: find_concepts_to_reuse.py  prep_for_rules_creation.py  rules_creation.py
app/airflow/dags/libs/rules_export/: build_json_file_v2.py  core.py  file_services.py  helper.py  improved.json  sample.json
app/airflow/dags/libs/search_recommendations/: __init__.py  core.py
app/airflow/dags/libs/vocab_concepts/: find_standard_concepts.py  prep_for_rules_creation.py  rules_creation.py
app/api/: .dockerignore  Dockerfile  entrypoint.sh  gunicorn.conf.py  initial_user.py  pyproject.toml
app/api/api/: filters.py  logger.py  mixins.py  serializers.py  signals.py  urls.py  views.py
app/api/authn/: urls.py  views.py
app/api/config/: react.py  settings.py  urls.py
app/api/data/: apps.py
app/api/datasets/: serializers.py  urls.py  views.py
app/api/files/: apps.py  models.py  serializers.py  views.py
app/api/files/fixtures/: filetypes.json
app/api/files/migrations/: 0001_initial.py  0002_add_deleted_at_to_filedownload.py  0002_alter_filedownload_id_alter_filetype_id.py  0002_filedownload_deleted_at_filedownload_deleted_by_and_more.py
app/api/jobs/: apps.py  models.py  serializers.py  views.py
app/api/jobs/migrations/: 0001_initial.py  0002_remove_job_scan_report_id_and_more.py  0003_alter_job_details.py  0004_alter_job_id_alter_jobstage_id_alter_stagestatus_id.py
app/api/mapping/: admin.py  apps.py  models.py  permissions.py
app/api/mapping/management/commands/: add_admins_to_datasets.py  add_datasets_to_partner.py  airflow_schema_creation.py  automatic_queue_and_containers_creation.py  automatic_seeding_data.py  default_super_user.py  generate_rules_json.py  unorphan_scanreports.py
app/api/mapping/migrations/: 0004_mappingstatus_uploadstatus.py  0005_auto_20241015_0900.py  0006_scanreporttable_trigger_reuse.py  0007_alter_dataset_hidden_alter_mappingstatus_value_and_more.py  0008_remove_scanreportfield_fraction_empty_and_more.py  0009_delete_classificationsystem_delete_nlpmodel_and_more.py  0010_scanreportconcept_confidence_and_more.py  0011_scanreport_upload_status_details.py  0012_mappingrecommendation.py  0013_alter_datadictionary_id_alter_datapartner_id_and_more.py  0014_alter_scanreportfield_name_and_more.py  0015_scanreporttable_death_table.py
app/api/projects/: serializers.py  urls.py  views.py
app/api/services/: enums.py  field_vocab_mappings.py  models.py  rules.py  rules_export.py  storage_service.py  worker_service.py
app/api/test/: conftest.py  test_permissions.py  test_serializers.py  test_services_rules.py  test_setup.py  test_views.py
app/shared/: pyproject.toml
app/shared/shared/: enums.py
app/shared/shared/files/: storage_service.py  views.py
app/shared/shared/jobs/: models.py  serializers.py  views.py
app/shared/shared/jobs/migrations/: 0001_initial.py  0002_remove_job_scan_report_id_and_more.py
app/shared/shared/mapping/: admin.py  forms.py  models.py  permissions.py  views.py
app/shared/shared/mapping/migrations/: 0005_auto_20241015_0900.py  0006_scanreporttable_trigger_reuse.py  0007_alter_dataset_hidden_alter_mappingstatus_value_and_more.py  0007_create_indexes.py  0008_alter_scanreportfield_fraction_empty_and_more.py  0008_remove_scanreportfield_fraction_empty_and_more.py  0009_delete_classificationsystem_delete_nlpmodel_and_more.py  0009_scanreport_upload_status_details.py  (+7 more)
app/shared/shared/services/: field_vocab_mappings.py  function_service.py  rules.py  rules_export.py  storage_router.py  storage_service.py  table_mappings.py  utils.py  vocab_mappings.py  worker_service.py
app/shared/shared/users/: serializers.py
app/shared/test/services/: settings.py
app/workers/: .dockerignore  Dockerfile  pyproject.toml
app/workers/RulesConceptsActivity/: __init__.py  reuse.py
app/workers/RulesFileQueue/: __init__.py  function.json
app/workers/RulesOrchestrator/: __init__.py
app/workers/UploadQueue/: __init__.py  function.json
app/workers/shared_code/: db.py  django_settings.py  helpers.py  models.py  rabbitmq_handler.py  storage_router.py
app/workers/test/RulesConceptsActivity/: test_create_concepts.py
app/workers/test/UploadQueue/: test_upload.py
app/workers/test/shared_code/: test_blob_parser.py  test_helpers.py
(+182 files in other folders)
