[project]
name = "carrot-mapper"
version = "4.2.1"
description = ""
authors = [
    { name = "Sam Cox", email = "sam.cox@nottingham.ac.uk" },
    { name = "Philip Quinlan", email = "philip.quinlan@nottingham.ac.uk" },
]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"

[dependency-groups]
test = [
    "pytest>=7.4.0,<8",
    "pytest-cov>=4.1.0,<5",
    "coverage>=7.3.0,<8",
]
dev = [
    "pre-commit>=3.6.1,<4",
    "isort>=5.13.2,<6",
    "black>=24.2.0,<25",
    "mypy>=1.8.0,<2",
    "flake8>=7.0.0,<8",
]

[tool.uv]
default-groups = [
    "test",
    "dev",
]
