[project]
name = "carrot-airflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apache-airflow>=2.10.5",
    "apache-airflow-providers-amazon>=9.7.0",
    "apache-airflow-providers-microsoft-azure>=12.3.1",
    "apache-airflow-providers-postgres>=6.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250308",
    "types-openpyxl>=3.1.5.20250506",
    "types-psycopg2>=2.9.21.20250318",
]
