[project]
name = "api"
version = "3.1.01"
description = "Web app for Carrot-Mapper"

authors = [
    { name = "Sam Cox", email = "sam.cox@nottingham.ac.uk" },
    { name = "Philip Quinlan", email = "philip.quinlan@nottingham.ac.uk" },
]

requires-python = "~=3.11"
license = "MIT"

dependencies = [
    "django==5.2.1",
    "openpyxl>=3.1.3,<4",
    "django-select2>=8.4.0,<9",
    "django-extra-views>=0.16.0,<1.0",
    "djangorestframework>=3.16.0,<4",
    "django-filter~=25.1",
    "requests>=2.32.3,<3",
    "azure-common>=1.1.28,<2",
    "azure-storage-queue>=12.12.0,<13",
    "azure-storage-blob>=12.25.1,<13",
    "whitenoise>=6.9.0,<7",
    "gunicorn==23.0.0",
    "graphviz>=0.20.3,<0.21",
    "drf-dynamic-fields>=0.4.0,<0.5",
    "django-cors-headers>=4.7.0,<5",
    "python-dotenv>=1.1.0,<2",
    "carrot-shared",
    "azure-monitor-opentelemetry>=1.6.9,<2",
    "djangorestframework-simplejwt>=5.5.0,<6",
    "dj-rest-auth[with-social]==7.0.1",
    "minio>=7.2.15,<8",
    "drf-spectacular>=0.28.0,<1",
    "django-allauth==65.3.0",
]

[dependency-groups]
test = ["pytest-django>=4.8.0,<5"]
dev = [
    "django-stubs>=5.2.0,<6",
    "djangorestframework-stubs>=3.16.0,<4",
    "django-filter-stubs>=0.1.3,<0.2",
    ]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[tool.uv.sources]
carrot-shared = { path = "../shared", editable = true }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "api",
    "authn",
    "config",
    "static",
    "datasets",
    "projects"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
DJANGO_SETTINGS_MODULE = "test.settings"
