[project]
name = "api"
version = "4.2.7"
description = "Web app for Carrot-Mapper"

authors = [
    { name = "Philip Quinlan", email = "philip.quinlan@nottingham.ac.uk" },
]

requires-python = "~=3.11"
license = "MIT"

dependencies = [
    "django==5.2.8",
    "openpyxl==3.1.5",
    "django-select2==8.4.3",
    "django-extra-views>=0.16.0,<1.0",
    "djangorestframework==3.16.1",
    "django-filter==25.2",
    "requests==2.32.5",
    "azure-common>=1.1.28,<2",
    "azure-storage-queue==12.14.1",
    "azure-storage-blob==12.27.1",
    "whitenoise==6.11.0",
    "gunicorn==23.0.0",
    "graphviz==0.21",
    "drf-dynamic-fields>=0.4.0,<0.5",
    "django-cors-headers==4.9.0",
    "python-dotenv==1.2.1",
    "azure-monitor-opentelemetry==1.8.2",
    "djangorestframework-simplejwt==5.5.1",
    "dj-rest-auth[with-social]==7.0.1",
    "minio==7.2.18",
    "drf-spectacular==0.29.0",
    "django-allauth==65.13.0",
    "psycopg2-binary==2.9.11",
]

[dependency-groups]
test = ["pytest-django>=4.8.0,<5"]
dev = [
    "django-stubs>=5.2.0,<6",
    "djangorestframework-stubs>=3.16.0,<4",
    "django-filter-stubs>=0.1.3,<0.2",
    ]

[tool.uv]
default-groups = [
    "test",
    "dev",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "api",
    "authn",
    "config",
    "static",
    "datasets",
    "projects"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
DJANGO_SETTINGS_MODULE = "test.settings"
