[project]
name = "shared"
version = "0.3.2"
description = "Carrot shared library"
authors = [
    { name = "Sam Cox", email = "sam.cox@nottingham.ac.uk" },
    { name = "Philip Quinlan", email = "philip.quinlan@nottingham.ac.uk" },
]
requires-python = "~=3.11"
license = "MIT"
dependencies = [
    "django~=4.2.0",
    "psycopg2-binary>=2.9.9,<3",
    "azure-storage-queue>=12.9.0,<13",
    "python-dotenv>=1.0.1,<2",
    "graphviz>=0.20.3,<0.21",
    "azure-storage-blob==12.20.0",
    "djangorestframework==3.15.2",
    "django-filter==24.2",
    "openpyxl==3.1.3",
]

[dependency-groups]
dev = [
    "mypy>=1.9.0,<2",
    "psycopg2>=2.9.9,<3",
    "django-stubs>=5.0.2,<6",
]
test = ["pytest>=8.1.1,<9"]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[tool.setuptools]
packages = ["shared"]

[tool.setuptools.package-data]
shared = ["py.typed"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["."]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
